--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/login_logo.png
+    - assets/img/login_logo.png
 
   fonts:
     - family: WorkSansSemiBold
